--- a/ivy/ivy.xml
+++ b/ivy/ivy.xml
@@ -113,6 +113,7 @@
     -->
     <!-- Uncomment this to use HBase as Gora backend. -->
     <dependency org="org.apache.gora" name="gora-hbase" rev="0.6.1" conf="*->default" />
+    <dependency org="org.apache.hbase" name="hbase-client" rev="1.2.1"/>
     <!-- Uncomment this to use Accumulo as Gora backend. -->
     <!--
     <dependency org="org.apache.gora" name="gora-accumulo" rev="0.6.1" conf="*->default" />
