--- a/ivy/ivy.xml
+++ b/ivy/ivy.xml
@@ -113,7 +113,9 @@
     -->
     <!-- Uncomment this to use HBase as Gora backend. -->
     <dependency org="org.apache.gora" name="gora-hbase" rev="0.6.1" conf="*->default" />
-    <dependency org="org.apache.hbase" name="hbase-client" rev="1.2.1"/>
+    <!-- http://mvnrepository.com/artifact/org.apache.hbase/hbase-common -->
+	<dependency org="org.apache.hbase" name="hbase-common" rev="0.98.19-hadoop2"/>
+    
     <!-- Uncomment this to use Accumulo as Gora backend. -->
     <!--
     <dependency org="org.apache.gora" name="gora-accumulo" rev="0.6.1" conf="*->default" />
