--- a/ivy/ivy.xml
+++ b/ivy/ivy.xml
@@ -114,8 +114,10 @@
     <!-- Uncomment this to use HBase as Gora backend. -->
     <dependency org="org.apache.gora" name="gora-hbase" rev="0.6.1" conf="*->default" />
     <!-- http://mvnrepository.com/artifact/org.apache.hbase/hbase-common -->
-	<dependency org="org.apache.hbase" name="hbase-common" rev="0.98.19-hadoop2"/>
-    
+	  <dependency org="org.apache.hbase" name="hbase-common" rev="0.98.19-hadoop2"/>
+
+    <dependency org="net.sourceforge.nekohtml" name="nekohtml" rev="1.9.19"/>
+
     <!-- Uncomment this to use Accumulo as Gora backend. -->
     <!--
     <dependency org="org.apache.gora" name="gora-accumulo" rev="0.6.1" conf="*->default" />
