--- a/ivy/ivy.xml
+++ b/ivy/ivy.xml
@@ -89,6 +89,7 @@
 
     <dependency org="org.hsqldb" name="hsqldb" rev="2.2.8" conf="*->default" />
     <dependency org="org.jdom" name="jdom" rev="1.1" conf="test->default"/>
+<!--     <dependency org="org.apache.nutch" name="nutch" rev="2.3.1" conf="*->default"/>  -->
     <dependency org="org.mockito" name="mockito-all" rev="1.9.5" conf="test->default"/>
     <dependency org="org.springframework" name="spring-test" rev="4.0.4.RELEASE" conf="test->default"/>
 
