--- a/ivy/ivy.xml
+++ b/ivy/ivy.xml
@@ -62,6 +62,9 @@
 
     <dependency org="com.ibm.icu" name="icu4j" rev="55.1" />
     <dependency org="org.apache.tika" name="tika-core" rev="1.10" />
+    <!-- http://mvnrepository.com/artifact/org.apache.tika/tika-parsers -->
+    <dependency org="org.apache.tika" name="tika-parsers" rev="1.10"/>
+
     <dependency org="com.googlecode.juniversalchardet" name="juniversalchardet" rev="1.0.3"/>
 
     <dependency org="log4j" name="log4j" rev="1.2.15" conf="*->master" />
