--- a/ivy/ivy.xml
+++ b/ivy/ivy.xml
@@ -93,10 +93,11 @@
     <dependency org="org.hsqldb" name="hsqldb" rev="2.2.8" conf="*->default" />
     <dependency org="org.jdom" name="jdom" rev="1.1" conf="test->default"/>
     
-    <!-- http://mvnrepository.com/artifact/org.apache.commons/commons-configuration2 -->
-	<dependency org="org.apache.commons" name="commons-configuration2" rev="2.0"/>
-	<!-- http://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
-	<dependency org="commons-beanutils" name="commons-beanutils" rev="1.9.2"/>
+    <!-- http://mvnrepository.com/artifact/org.apache.httpcomponents/fluent-hc -->
+	<dependency org="org.apache.httpcomponents" name="fluent-hc" rev="4.2.6"/>
+	
+	<!-- http://mvnrepository.com/artifact/org.yaml/snakeyaml -->
+	<dependency org="org.yaml" name="snakeyaml" rev="1.17"/>
 	
     
 
