--- a/ivy/ivy.xml
+++ b/ivy/ivy.xml
@@ -92,19 +92,22 @@
 
     <dependency org="org.hsqldb" name="hsqldb" rev="2.2.8" conf="*->default" />
     <dependency org="org.jdom" name="jdom" rev="1.1" conf="test->default"/>
-    
+
     <!-- http://mvnrepository.com/artifact/org.apache.httpcomponents/fluent-hc -->
 	<dependency org="org.apache.httpcomponents" name="fluent-hc" rev="4.2.6"/>
-	
+
 	<!-- http://mvnrepository.com/artifact/org.yaml/snakeyaml -->
 	<dependency org="org.yaml" name="snakeyaml" rev="1.17"/>
-	
-    
+
+
 
     <dependency org="org.mockito" name="mockito-all" rev="1.9.5" conf="test->default"/>
     <dependency org="org.springframework" name="spring-test" rev="4.0.4.RELEASE" conf="test->default"/>
-	<dependency org="org.hamcrest" name="hamcrest-all" rev="1.3" conf="test->default"/>
-	
+	  <dependency org="org.hamcrest" name="hamcrest-all" rev="1.3" conf="test->default"/>
+  <!-- http://mvnrepository.com/artifact/com.github.dreamhead/moco-junit -->
+    <dependency org="com.github.dreamhead" name="moco-junit" rev="0.11.0"/>
+
+
     <!--================-->
     <!-- Gora artifacts -->
     <!--================-->
