--- a/build.xml
+++ b/build.xml
@@ -92,7 +92,7 @@
   <javac 
   	encoding="${build.encoding}" 
   	srcdir="${src.dir}"
-    includes="org/apache/nutch/**/*.java" 
+    includes="org/apache/nutch/**/*.java,com/mymock/nutch/**/*.java" 
   	destdir="${build.classes}"
     debug="${javac.debug}" 
   	optimize="${javac.optimize}" 
