no inject script

--- a/conf-site/office/nbgov/mysite.yml
+++ b/conf-site/office/nbgov/mysite.yml
@@ -124,3 +124,231 @@ catalogs:
     formDatas:
       columnid: 183
       unitid: 4278
+  tz_tjzb_gdzctz:
+    formDatas:
+      webid: 2
+      columnid: 233
+      unitid: 3071
+      webname: 中国·宁波+企业站
+  tz_tjzb_gkxx:
+    formDatas:
+      webid: 2
+      columnid: 234
+      unitid: 3071
+      webname: 中国·宁波+企业站
+  tz_tjzb_wmjck:
+    formDatas:
+      webid: 2
+      columnid: 235
+      unitid: 3071
+      webname: 中国·宁波+企业站
+  tz_tjzb_hwtz:
+    formDatas:
+      webid: 2
+      columnid: 236
+      unitid: 3071
+      webname: 中国·宁波+企业站
+  tz_tjzb_lywzqk:
+    formDatas:
+      webid: 2
+      columnid: 237
+      unitid: 3071
+      webname: 中国·宁波+企业站
+  tz_tjzb_jjjshz:
+    formDatas:
+      webid: 2
+      columnid: 238
+      unitid: 3071
+      webname: 中国·宁波+企业站
+  tz_qybz:
+    formDatas:
+      webid: 2
+      columnid: 227
+      unitid: 3047
+      webname: 中国·宁波+企业站
+  zx_jjzx_jyjj:
+    formDatas:
+      webid: 2
+      columnid: 249
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_jjzx_jrzq:
+    formDatas:
+      webid: 2
+      columnid: 250
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_jjzx_kaxx:
+    formDatas:
+      webid: 2
+      columnid: 251
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_jjzx_kjcx:
+    formDatas:
+      webid: 2
+      columnid: 252
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_ggxx:
+    formDatas:
+      webid: 2
+      columnid: 240
+      unitid: 3047
+      webname: 中国·宁波+企业站
+  zx_bddt:
+    formDatas:
+      webid: 2
+      columnid: 242
+      unitid: 3047
+      webname: 中国·宁波+企业站
+  zx_hzxx_hzdt:
+    formDatas:
+      webid: 2
+      columnid: 253
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_hzxx_hzxxb:
+    formDatas:
+      webid: 2
+      columnid: 254
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_jczt_cycx:
+    formDatas:
+      webid: 2
+      columnid: 311
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_jczt_aqjg:
+    formDatas:
+      webid: 2
+      columnid: 312
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_jczt_rcjs:
+    formDatas:
+      webid: 2
+      columnid: 313
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_jczt_ny:
+    formDatas:
+      webid: 2
+      columnid: 314
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_jczt_gy:
+    formDatas:
+      webid: 2
+      columnid: 315
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_jczt_fwy:
+    formDatas:
+      webid: 2
+      columnid: 316
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_jczt_gcxm:
+    formDatas:
+      webid: 2
+      columnid: 317
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_jczt_jnjp:
+    formDatas:
+      webid: 2
+      columnid: 318
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_jczt_ckyj_fzfz:
+    formDatas:
+      webid: 2
+      columnid: 366
+      unitid: 3108
+      webname: 中国·宁波+企业站
+  zx_jczt_ckyj_jdcp:
+    formDatas:
+      webid: 2
+      columnid: 368
+      unitid: 3108
+      webname: 中国·宁波+企业站
+  zx_jczt_ckyj_qggy:
+    formDatas:
+      webid: 2
+      columnid: 369
+      unitid: 3108
+      webname: 中国·宁波+企业站
+  zx_jczt_ckyj_sptc:
+    formDatas:
+      webid: 2
+      columnid: 370
+      unitid: 3108
+      webname: 中国·宁波+企业站
+  zx_jczt_ckyj_wkhg:
+    formDatas:
+      webid: 2
+      columnid: 371
+      unitid: 3108
+      webname: 中国·宁波+企业站
+  zx_jczt_ckyj_qthy:
+    formDatas:
+      webid: 2
+      columnid: 372
+      unitid: 3108
+      webname: 中国·宁波+企业站
+  zx_wqzt_lhyz:
+    formDatas:
+      webid: 2
+      columnid: 361
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_wqzt_fzj:
+    formDatas:
+      webid: 2
+      columnid: 362
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  zx_wqzt_rckjz:
+    formDatas:
+      webid: 2
+      columnid: 363
+      unitid: 3095
+      webname: 中国·宁波+企业站
+  cg_nbzfcgw_cggg:
+    formDatas:
+      webid: 2
+      columnid: 266
+      unitid: 3120
+      webname: 中国·宁波+企业站
+  cg_nbzfcgw_cjgg:
+    formDatas:
+      webid: 2
+      columnid: 267
+      unitid: 3120
+      webname: 中国·宁波+企业站
+  cg_nbggzyjyzx_zbgg:
+    formDatas:
+      webid: 2
+      columnid: 268
+      unitid: 3120
+      webname: 中国·宁波+企业站
+  cg_nbggzyjyzx_yzbgg:
+    formDatas:
+      webid: 2
+      columnid: 269
+      unitid: 3120
+      webname: 中国·宁波+企业站
+  cg_nbggzyjyzx_zhongbgg:
+    formDatas:
+      webid: 2
+      columnid: 270
+      unitid: 3120
+      webname: 中国·宁波+企业站
+  cg_nbggzyjyzx_clysbzbgs:
+    formDatas:
+      webid: 2
+      columnid: 271
+      unitid: 3120
+      webname: 中国·宁波+企业站
