--- a/build.xml
+++ b/build.xml
@@ -304,7 +304,9 @@
    -->
    <zipfileset dir="${build.lib.dir}" prefix="lib" includes="**/*.jar"
     excludes="jasper*.jar,jsp-*.jar,hadoop-*.jar,hbase*test*.jar,ant*jar,hsqldb*.jar,slf4j*.jar,log4j*.jar" />
-   <zipfileset dir="${build.plugins}" prefix="classes/plugins" />
+<!-- because spring hadoop does't support classes directory class loader. -->
+	<zipfileset dir="${build.plugins}" prefix="classes/plugins" />
+	<zipfileset dir="${build.plugins}" prefix="plugins" /> 
   </jar>
  </target>
 
